Fixes some wack spacing

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -48,7 +48,7 @@ body {
   width: 30px;
   height: 30px;
   position: relative;
-  margin: 50px auto;
+  margin: 0 auto;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
